Add CustomerFavoritesPage and implement favorite product functionality TestCase001 and TestCase002 for UserStory7